# personal-webpage

./: .gitignore  404.html  CNAME  Gemfile  README.md  _config.yml  cv.html  index.html  publications.html  research.html  stack.yaml
.github/workflows/: deploy.yml
_data/: cv.yml  navigation.yml  people.yml  publications.yml
_layouts/: default.html
builder/: Katex.hs  site.hs  webpage.cabal
css/: default.css  garbage.css
website/: cv.html  index.html  publications.html  thesis.md
website/templates/: default.html
